--- a/index.html
+++ b/index.html
@@ -3,52 +3,93 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tic Tac Toe</title>
+  <link rel="icon" type="img/png" href="./img/icon.png">
+  <title>Tic-Snack-Toe</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <audio src="aud/sizzle.mp3" id="sizzle"></audio>
   <script src="https://use.fontawesome.com/0b8790a92d.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
 </head>
 <body>
-  <div id="curPlayer" class="top">
+
+  <!-- Main Menu -->
+  <div id="menu">
+
+    <div id="curPlayer" class="top">
+      <span class="kern">Tic -Snack -Toe</span>
+    </div>
+
+    <div id="userInfo">
+      Play against the computer or another user. Let's get it crackin'!
+    </div>
+
+    <i class="fa fa-caret-down" aria-hidden="true"></i>
+
+    <div class="selectGame">
+      <button class="gameType" id="aiX">
+        <img src="img/computer-x.svg" alt="Computer as Bacon">
+        <small>vs.</small>
+        <img src="img/user-o.svg" alt="User as Egg">
+      </button>
+      <button class="gameType" id="aiO">
+        <img src="img/user-x.svg" alt="User as Bacon">
+        <small>vs.</small>
+        <img src="img/computer-o.svg" alt="Computer as Egg">
+      </button>
+      <button class="gameType" id="ai">
+        <img src="img/user-x.svg" alt="User as Bacon">
+        <small>vs.</small>
+        <img src="img/user-o.svg" alt="User as Egg">
+      </button>
+    </div>
+
   </div>
-  <div class="board">
-    <div class="innerBoard">
-      <div class="row">
-        <div class="cell" id="a_0_0"></div>
-        <div class="cell" id="a_0_1"></div>
-        <div class="cell" id="a_0_2"></div>
-     </div>
-     <div class="row">
-        <div class="cell" id="a_1_0"></div>
-        <div class="cell" id="a_1_1"></div>
-        <div class="cell" id="a_1_2"></div>
-      </div>
-      <div class="row">
-        <div class="cell" id="a_2_0"></div>
-        <div class="cell" id="a_2_1"></div>
-        <div class="cell" id="a_2_2"></div>
-      </div>
+
+  <div id="overlays">
+    <div id="red-overlay"></div>
+    <div id="red-multiply"></div>
+  </div>
+
+  <!-- Turn indicators and controls -->
+  <div id="controls">
+    <button id="menu-btn">
+      <i class="fa fa-bars" aria-hidden="true"></i>
+    </button>
+    <div id="turn-indicator">
+      <img src="img/bacon_act.svg" alt="Bacon's turn" id="bacon-turn">
+      <i class="fa fa-caret-up" aria-hidden="true" id="up-arrow"></i>
+      <i class="fa fa-caret-left" aria-hidden="true" id="left-arrow"></i>
+      <h4>YOUR TURN</h4>
+      <i class="fa fa-caret-down inactive" aria-hidden="true" id="down-arrow"></i>
+      <i class="fa fa-caret-right" aria-hidden="true" id="right-arrow"></i>
+      <img src="img/egg_in.svg" alt="Egg's turn" id="egg-turn">
+      <button id="reset">RESET</button>
     </div>
   </div>
 
-  <div class="radioBut">
-    <label><input type="radio" class="radio" name="ai" id="aiX">
-      <i class="fa fa-laptop fa-2x" aria-hidden="true"></i>
-      <small>vs.</small>
-      <i class="fa fa-user fa-2x" aria-hidden="true"></i>
-    </label>
-    <label><input type="radio" class="radio" name="ai" id="aiO">
-      <i class="fa fa-user fa-2x" aria-hidden="true"></i>
-      <small>vs.</small>
-      <i class="fa fa-laptop fa-2x" aria-hidden="true"></i>
-    </label>
-    <label><input type="radio" class="radio" name="ai" id="ai" checked>
-      <i class="fa fa-user fa-2x" aria-hidden="true"></i>
-      <small>vs.</small>
-      <i class="fa fa-user fa-2x" aria-hidden="true"></i>
-    </label>
+  <!-- Game board -->
+  <div class="board">
+    <div class="innerBoard">
+      <div class="rows">
+        <div class="row">
+          <div class="cell" id="a_0_0"></div>
+          <div class="cell" id="a_0_1"></div>
+          <div class="cell" id="a_0_2"></div>
+        </div>
+        <div class="row">
+          <div class="cell" id="a_1_0"></div>
+          <div class="cell" id="a_1_1"></div>
+          <div class="cell" id="a_1_2"></div>
+        </div>
+        <div class="row">
+          <div class="cell" id="a_2_0"></div>
+          <div class="cell" id="a_2_1"></div>
+          <div class="cell" id="a_2_2"></div>
+        </div>
+      </div>
+    </div>
   </div>
-  <button type="reset" id='reset'>Reset</button>
 
   <script type="text/javascript" src="js/app.js"></script>
 </body>
