--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Tic-Snack-Toe</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <audio src="aud/sizzle.mp3" id="sizzle"></audio>
+  <audio src="aud/ding.wav" id="ding"></audio>
   <script src="https://use.fontawesome.com/0b8790a92d.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
